RESOLVED FIXED211818
Crash in PDFPlugin::ensureDataBufferLength
https://bugs.webkit.org/show_bug.cgi?id=211818
Summary Crash in PDFPlugin::ensureDataBufferLength
Brady Eidson
Reported 2020-05-12 16:56:28 PDT
Crash in PDFPlugin::ensureDataBufferLength <rdar://problem/62932155>
Attachments
Patch (1.89 KB, patch)
2020-05-12 16:59 PDT, Brady Eidson
no flags
Brady Eidson
Comment 1 2020-05-12 16:59:09 PDT
EWS
Comment 2 2020-05-14 11:02:17 PDT
Committed r261698: <https://trac.webkit.org/changeset/261698> All reviewed patches have been landed. Closing bug and clearing flags on attachment 399203 [details].
Note You need to log in before you can comment on or make changes to this bug.