Crash in PDFPlugin::ensureDataBufferLength <rdar://problem/62932155> and https://bugs.webkit.org/show_bug.cgi?id=211818

Reviewed by Tim Horton.

There's some currently unreproducible case(s) where a range request finishes
while there's no m_data to append it to.

It's fair hardening to handle that case.

* WebProcess/Plugins/PDF/PDFPlugin.mm:
(WebKit::PDFPlugin::getResourceBytesAtPositionMainThread): Handle null m_data.
(WebKit::PDFPlugin::ensureDataBufferLength): Ditto.


Canonical link: https://commits.webkit.org/224794@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261698 268f45cc-cd09-0410-ab3c-d52691b4dbfc